2007-10-05  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: use gio-2.0 instead of gio-standalone.

2007-10-04  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-trash-directory.[ch]:
        * libnautilus-private/nautilus-trash-file.[ch]:
	Remove virtual trash locations, we now use the gvfs trash:
	
        * libnautilus-private/nautilus-trash-monitor.[ch]:
	Make this a stub for now. Need to figure out how to do this.
	
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-window-manage-views.c:
	Handle the removal of NautilusTrash*

2007-10-04  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-thumbnails.c:
	Use gio instead of gnome-vfs to get mtime

2007-10-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-customization-data.c:
        * libnautilus-private/nautilus-customization-data.h:
        * src/nautilus-property-browser.c:
	Use gio to read info

2007-10-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.c (selection_is_image_file):
	Use gio to get mime type

2007-10-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.c:
	Use GFileMonitor to monitor xdg user dirs file

2007-10-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/Makefile.am (INCLUDES):
	Bump name for extension dir since we're not compatible anymore

2007-10-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-bookmark.c:
        * libnautilus-private/nautilus-customization-data.c:
        * libnautilus-private/nautilus-desktop-directory.c:
        * libnautilus-private/nautilus-directory-background.c: