@@ -1,3 +1,7 @@
+2007-10-08  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-bookmark-list.[ch]: port to gio.
+
 2007-10-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* configure.in: use gio-2.0 instead of gio-standalone.
